<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/rlayout"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/download"
        android:id="@+id/d"/>
    <TextView
        android:id="@+id/downloaded_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/d"
        android:textSize="15sp"
        android:maxLines="1"
        android:maxLength="22"
        android:layout_marginStart="10dp"
        android:layout_centerInParent="true"/>
    <TextView
        android:id="@+id/downloaded_mp3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mp3"
        android:layout_below="@id/downloaded_title"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/downloaded_mp4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mp4"
        android:layout_below="@id/downloaded_title"
        android:visibility="gone"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        />
    <TextView
        android:id="@+id/downloaded_m4a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/m4a"
        android:layout_below="@id/downloaded_title"
        android:visibility="gone"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        />
</RelativeLayout>